Recoded Middle logo & Marquee
Recoded Middle logo & Marquee

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <button id="close">×</button>
         </div>
 
-        <div id="logo">
-            <a class="E">E</a>
+        <div id="middle">
+            <div class="letter">E</div>
             <marquee>
-                x <a>emily</a>
-                x <a>alastor</a> x
-            </marquee>
+                x <a>PERSON1</a>
+                x <a>PERSON2</a> x
+                </marquee>
         </div>
 
 
