Updated Middle logo again
Updated Middle logo again

--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
             <button id="close">×</button>
         </div>
 
-        <div id="middle">
-            <div class="letter">E</div>
+
+        <div id="middleregion">
+            <a class="letter">E</a>
+
             <marquee>
-                x <a>PERSON1</a>
-                x <a>PERSON2</a> x
-                </marquee>
+                x <a>emily</a>
+                x <a>name</a> x
+            </marquee>
+
         </div>
 
 
