Returned to .html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
         <video autoplay loop id="myVideo">
-            <source src="vid<?php echo(rand(1,2)); ?>.mp4" type="video/mp4">
+            <source src="vid2.mp4" type="video/mp4">
         </video>
 
 
