--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             <a class="letter">E</a>
 
             <marquee>
-                x <a>emily</a>
-                x <a>name</a> x
+                x <a>emily</a> x
             </marquee>
 
         </div>
