Added sidebar owo

--- a/index.html
+++ b/index.html
@@ -7,18 +7,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
     </head>
     <body>
-
+        <!--
         <div id="toggle" class="topregion" style="display: show;">
             <a class="warn"><strong>Note:</strong></a><a class="note"> 99,9% self coded, future updates will come</a>
             <button id="close">×</button>
-        </div>
+        </div> -->
+
+        <div class="topregion2">
+            <div class="box1"><a href="https://github.com/emilydev/" target="_BLANK"  >Github</a></div>
+            <div class="box2"><a href="http://steamcommunity.com/profiles/76561198451347760/" target="_BLANK">Steam</a></div>
+            <div class="box3"><a href="https://www.youtube.com/c/isucc3ssfx" target="_BLANK"  >Youtube</a></div>
+        </div> 
 
 
         <div id="middleregion">
-            <a class="letter">E</a>
-            
-            <marquee>
-                x <a>emily</a> x
+                <a href="https://discord.gg/XRBMqeP" target="_BLANK" class="letter">E</a>
+
+            <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
+                x <a class="emily">emily</a> x
             </marquee>
 
         </div>
