--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
     </head>
     <body>
-        <!--
         <div id="toggle" class="topregion" style="display: show;">
             <a class="warn"><strong>Note:</strong></a><a class="note"> 99,9% self coded, future updates will come</a>
             <button id="close">×</button>
-        </div> -->
+        </div>
 
         <div class="topregion2">
             <div class="box1"><a href="https://github.com/emilydev/" target="_BLANK"  >Github</a></div>
