Added Discord tab (Even tho u can just click the logo)
Added Discord tab (Even tho u can just click the logo)

--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
     </head>
     <body>
         <div id="toggle" class="topregion" style="display: show;">
-            <a class="warn"><strong>Note:</strong></a><a class="note"> 99,9% self coded, future updates will come</a>
+            <a class="warn"><strong>Note:</strong></a><a class="note"> Project by Emily.</a>
             <button id="close">×</button>
         </div>
 
-        <div class="topregion2">
-            <div class="box1"><a href="https://github.com/emilydev/" target="_BLANK"  >Github</a></div>
-            <div class="box2"><a href="http://steamcommunity.com/profiles/76561198451347760/" target="_BLANK">Steam</a></div>
-            <div class="box3"><a href="https://www.youtube.com/c/isucc3ssfx" target="_BLANK"  >Youtube</a></div>
+        <div class="linkbar">
+            <div class="link"><a href="https://github.com/emilydev/" target="_BLANK"  class="links">Github</a></div>
+            <div class="link"><a href="http://steamcommunity.com/profiles/76561198451347760/" target="_BLANK" class="links">Steam</a></div>
+            <div class="link"><a href="https://www.youtube.com/c/isucc3ssfx" target="_BLANK"  class="links">Youtube</a></div>
+            <div class="link"><a href="https://discord.gg/XRBMqeP" target="_BLANK"  class="links">Discord</a></div>
         </div> 
 
 
