Tablist, Logo, Slidetext
+ Region title
+ 2nd Region
+ Logo slidedown
+ Marquee bounce

--- a/index.html
+++ b/index.html
@@ -21,18 +21,26 @@
         </div>
 
         <div class="linkbar">
+            <a class="region">Emily</a>
             <div class="link"><a href="https://github.com/emilydev/" target="_BLANK"  class="links">Github</a></div>
             <div class="link"><a href="http://steamcommunity.com/profiles/76561198451347760/" target="_BLANK" class="links">Steam</a></div>
             <div class="link"><a href="https://www.youtube.com/c/isucc3ssfx" target="_BLANK"  class="links">Youtube</a></div>
             <div class="link"><a href="https://discord.gg/XRBMqeP" target="_BLANK"  class="links">Discord</a></div>
+        <br>
+            <a class="region">Alastowor</a>
+            <div class="link"><a href="https://github.com/Alastowor" target="_BLANK"  class="links">Github</a></div>
+            <div class="link"><a href="http://steamcommunity.com/profiles/76561197963361791" target="_BLANK" class="links">Steam</a></div>
+            <div class="link"><a href="https://www.youtube.com/channel/UCjef2gP29I3FJ80NILiyLKg" target="_BLANK"  class="links">Youtube</a></div>        
         </div> 
 
 
         <div id="middleregion">
-                <a href="https://discord.gg/XRBMqeP" target="_BLANK" class="letter">E</a>
+            <marquee behavior="slide" direction="down" class="letterslide" >
+                    <a href="https://discord.gg/XRBMqeP" target="_BLANK" class="letter">E</a>
+            </marquee>
 
-            <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-                x <a class="emily">emily</a> x
+            <marquee class="names" onmouseover="this.setAttribute('scrolldelay', 400)" onmouseout="this.setAttribute('scrolldelay', 100)" truespeed = "true" scrolldelay = "100" behavior="alternate" direction="right">
+                <a class="emily">Envy</a>
             </marquee>
 
         </div>
